# vinx

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  in.vinx  largening_rect.mkv  out.mkv  tmp.mkv
.github/ISSUE_TEMPLATE/: blank-template.md  bug_report.md  feature_request.md
examples/: 01_basics.vinx  02_custom_events.vinx  common.vinx  inverse.vinx  inverse_rect.vinx  rows.vinx  square_one.vinx
how_to/: 03_advanced.vinx
src/: action.rs  context.rs  lib.rs  main.rs  video.rs
src/action/: action.rs  action_handle.rs  builder.rs  mod.rs  trigger.rs
src/event/: builtins.rs  component.rs  event.rs  event_action.rs  mod.rs  operation.rs  operations.rs
src/event/variable/: mod.rs  types.rs  values.rs
src/translator/: actions.rs  builtins.rs  component_class.rs  file_manager.rs  mod.rs  operations.rs  sequence.rs  signature.rs  structures.rs  translator.rs  type_constraints.rs  value.rs  word.rs
src/translator/ast/: action.rs  ast.rs  builder.rs  definition.rs  file_load.rs  mod.rs  sequence.rs  signature.rs  value.rs  var_definition.rs
src/translator/automata/: automaton.rs  linear_automaton.rs  mod.rs  state.rs  transition.rs
src/translator/error/: error.rs  location.rs  mod.rs  warning.rs
src/translator/parser/: action.rs  definition.rs  mod.rs  operation.rs  parser.rs  structure.rs  value.rs
src/translator/type_inference/: mod.rs  type_bounds.rs  type_constraints.rs  type_range.rs
src/variable/: mod.rs  stack.rs  types.rs  values.rs  variable.rs
src/variable/value/: direction.rs  effect.rs  mod.rs  structure.rs  value.rs
tmp/: in.vinx
