[package]
name = "vinx"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc="*"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
rsframe = { path = "thirdparty/rsframe" } # version = "0.1.9" }
# image = { version = "0.25.8" }
rand = "0.8.5"
tree-sitter = { version = "0.25.8" }
tree-sitter-vinx = "0.1.0"
colorized = "1.0.0"
